--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>no.ap</groupId>
 	<artifactId>persistence</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.4.0-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -34,18 +34,13 @@
 		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-apoc</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>no.ap</groupId>
-			<artifactId>commons</artifactId>
-			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -78,7 +73,17 @@
 		<dependency>
 			<groupId>org.xtreemfs.babudb</groupId>
 			<artifactId>babudb</artifactId>
-			<version>0.3.3</version>
+			<version>0.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-asm</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>2.2</version>
 		</dependency>
 
 	</dependencies>
